syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}


message GreetManyRequest {
    Greeting greeting = 1;
}

message GreetManyResponse {
    string result = 1;
}


message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}


message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

service GreetService {
    // Unary
    rpc Greet (GreetRequest) returns (GreetResponse) {};
    rpc GreetMany (GreetManyRequest) returns (stream GreetManyResponse) {};
    rpc GreetLong (stream LongGreetRequest) returns (LongGreetResponse) {};
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

}
